# astrid

./: .gitignore  AGENTS.md  BTSP_24H_ASSESSMENT_2026_04_17.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  TODO.md
capsules/consciousness-bridge/: Capsule.toml  Cargo.toml  README.md  STEWARDSHIP.md  babysit.sh  consolidate.sh  harvest_feedback.sh  startup_greeting.sh
capsules/consciousness-bridge/src/: action_continuity.rs  action_self_knowledge.rs  agency.rs  astrid_shadow.rs  attractor_atlas.rs  audio.rs  autonomous.rs  autoresearch.rs  chimera.rs  chimera_prime.rs  chimera_support.rs  codec.rs  codec_explorer.rs  codec_gain_flow.rs  codec_lambda_analysis.rs  codec_time_domain.rs  condition_metrics.rs  db.rs  experiment_conveyor.rs  journal.rs  lambda_edge.rs  lib.rs  llm.rs  llm_jobs.rs  llm_tests.rs  main.rs  mcp.rs  mcp_tests.rs  memory.rs  paths.rs  prompt_budget.rs  reflective.rs  rescue_policy.rs  rescue_policy_tests.rs  rescue_policy_text.rs  rescue_policy_value.rs  self_model.rs  shared_investigation.rs  spectral_explorer.rs  spectral_schema.rs  (+3 more)
capsules/consciousness-bridge/src/autonomous/: btsp.rs  hebbian.rs  state.rs  (+4 more)
capsules/consciousness-bridge/tests/: mock_ws_integration.rs
capsules/consciousness-bridge/tools/: being_phase_space_compare.py  being_phase_space_watcher.py  being_phase_transition_edge_watcher.py  being_phase_transition_report.py  btsp_agency_scoreboard.py  btsp_astrid_indirect_uptake.py  btsp_causality_audit.py  btsp_choice_outcome_latency.py  btsp_cohort_scoreboard.py  btsp_latency_table.py  btsp_onset_truth_table.py  btsp_reality_audit.py  btsp_runtime_analysis.py  inject_steward_note.py  test_btsp_causality_audit.py  test_volitional_attractor_assessment.py
capsules/consciousness-bridge/workspace/: GPU_MEMORY_ANALYSIS.md  NEEDS_ASSESSMENT.md  bridge.db-shm  bridge.db-wal  state.json
crates/astrid-guest/: Cargo.toml
crates/astrid-guest/src/: lib.rs
crates/astrid-minime-protocol/: Cargo.toml
crates/astrid-minime-protocol/src/: division.rs  lib.rs  sensory.rs  telemetry.rs  version.rs
crates/astrid-minime-protocol/tests/: wire_contract.rs
(+4262 files in other folders)
