[package]
name = "astrid-minime-protocol"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Versioned wire contracts shared by Astrid and Minime"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
